<resources>
    <string name="app_name">Smart Restaurant</string>

    <string name="ok">Ok</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="vui_long_nhap_ho_ten">Vui lòng nhập đầy đủ họ tên</string>
    <string name="vui_long_nhap_so_dien_thoai">Vui lòng nhập đầy đủ số điện thoại</string>
    <string name="vui_long_nhap_gioitinh">Vui lòng nhập giới tính</string>
    <string name="vui_long_nhap_date">Vui lòng nhập ngày tháng năm sinh</string>
    <string name="phone_valid">Số điện thoại của bạn không đúng định dạng!</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="staff">Nhân viên</string>
    <string name="ca_nhan">Cá nhân</string>
    <string name="mon_da_goi">Món đã gọi</string>
    <string name="edit_title">Chỉnh sửa</string>
    <string name="logout">Đăng xuất</string>
    <string name="danh_sach_nhan_vien">Danh sách nhân viên</string>
    <string name="staff_description">Nếu có bất kì thắc mắc hoặc khiếu nại gì đến nhà hàng, nhân viên,... Quý khách vui lòng liên hệ trực tiếp đến quản lý phụ trách cửa hàng!</string>
    <string name="no_data">Không có nội dung tương ứng!</string>
    <string name="confirm_info_user_date_birth">dd/mm/yyyy</string>
    <string name="cap_nhat_thanh_cong">Cập nhật thông tin thành công!</string>
    <string name="de_xuat_cho_ban">Đề xuất cho bạn</string>
    <string name="dat_lai_lan_nua">Đặt lại lần nữa</string>
    <string name="uu_dai_dac_biet">Ưu đãi đặc biết</string>
    <string name="no_voucher">Bạn chưa có mã khuyến mãi!</string>
</resources>
