<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back2"
        android:id="@+id/cl_container"
        tools:context=".dangnhap">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorWhite"
            android:hint="@string/ten_dang_nhap"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="#FA2FAF"
            android:textColorHint="#3741F0"
            android:maxLength="255"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorWhite"
            android:hint="@string/so_dien_thoai"
            android:inputType="phone"
            android:padding="8dp"
            android:maxLength="11"
            android:textColor="#FA2FAF"
            android:textColorHint="#3741F0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="#FF9900"
            android:text="@string/dang_nhap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    </android.support.constraint.ConstraintLayout>
</layout>
